# taiko-prover-core

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: prover.rs
dev/: Cargo.toml
prover/: Cargo.toml
prover/src/: circuit_autogen.rs  circuit_witness.rs  circuits.rs  server.rs  shared_state.rs
